[B][COLOR gold]v1.9.13[/COLOR][/B]
- Replaced buggy "Resume" context menu dialog with a yes/no dialog

[B][COLOR gold]v1.9.12[/COLOR][/B]
- orionoid adjustments
- Bypass old (deleted) tmdb key if still stored in addon_data settings.xml

[B][COLOR gold]v1.9.10[/COLOR][/B]
- Added some dead hosts to the 'block' dict

[B][COLOR gold]v1.9.9[/COLOR][/B]
- Replaced API keys
    (it seems that some folks forked/cloned TheOath but didn't bother replacing my API keys.
     Now the old ones have been deleted)

[B][COLOR gold]v1.9.7[/COLOR][/B]
- Added more providers language options in settings, to support Openscrapers's newly
    added language scrapers

[B][COLOR gold]v1.9.5[/COLOR][/B]
- Fix crash on sources list dialog exit
- Made add-on's context menu items labels italics, to differ from Kodi's ones

[B][COLOR gold]v1.9.3[/COLOR][/B]
- Scrobble/bookmarks/resume optimisations

[B][COLOR gold]v1.9.0[/COLOR][/B]
- Added Trakt Scrobble function. NOTE: Do Not enable this if you use scrobbling for
    http sources through the official Trakt add-on, to avoid double scrobbling.
    * Basic scrobbling functionality - currently only Scrobble on Stop is supported.
- Other minor code tweaks

[B][COLOR gold]v1.8.11[/COLOR][/B]
- Added Polish translation - thx kodiultimate
- Some code adjustments suggested by Venom's dev - thx

[B][COLOR gold]v1.8.9[/COLOR][/B]
- Fix toggling watched status when Trakt isn't auth'ed or indicators are set to 'Local"
    and Metahandler 3.99.x is installed

[B][COLOR gold]v1.8.8[/COLOR][/B]
- Fix dupes filter for openscrapers
- Minor code tweaks/settings adj

[B][COLOR gold]v1.8.6[/COLOR][/B]
- Added extra color option for Orion streams (Provider label only - optional)

[B][COLOR gold]v1.8.5[/COLOR][/B]
- Fix episodes thumb appearance in Estuary
- Append only the bare minimum of metadata on sources directory
- Various modules updates

[B][COLOR gold]v1.8.3[/COLOR][/B]
- Dupes checker tweaks: