@@ -130,7 +130,7 @@ class tvMaze:
 
     def episodeAbsoluteNumber(self, thetvdb, season, episode):
         try:
-            url = 'http://thetvdb.com/api/%s/series/%s/default/%01d/%01d' % ('Z2V0X3lvdXJz'.decode('base64'), thetvdb, int(season), int(episode))
+            url = 'https://thetvdb.com/api/%s/series/%s/default/%01d/%01d' % ('Z2V0X3lvdXJz'.decode('base64'), thetvdb, int(season), int(episode))
             return int(client.parseDOM(client.request(url), 'absolute_number')[0])
         except:
             pass
@@ -140,7 +140,7 @@ class tvMaze:
 
     def getTVShowTranslation(self, thetvdb, lang):
         try:
-            url = 'http://thetvdb.com/api/%s/series/%s/%s.xml' % ('Z2V0X3lvdXJz'.decode('base64'), thetvdb, lang)
+            url = 'https://thetvdb.com/api/%s/series/%s/%s.xml' % ('Z2V0X3lvdXJz'.decode('base64'), thetvdb, lang)
             r = client.request(url)
             title = client.parseDOM(r, 'SeriesName')[0]
             title = client.replaceHTMLCodes(title)
